--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "scripts": {
     "dev": "nodemon index.js"
   },
-  "author": "Raúl Torrente López",
+  "author": "Raúl",
   "license": "ISC",
   "dependencies": {
     "bcrypt": "^5.1.1",
